finish timesheet page

--- a/src/components/timesheet/TimeSheet.css
+++ b/src/components/timesheet/TimeSheet.css
@@ -15,3 +15,21 @@
 .compensated {
 
 }
+.bottom-item {
+  display: inline-block
+}
+.selectUpload {
+  width: 230px
+}
+.btnChooseFile {
+
+}
+.btnSave {
+
+}
+.saved {
+  background-color: lightgreen;
+}
+.notSaved {
+  background-color: lightblue;
+}
